@@ -3,6 +3,7 @@ MVC 5
 - Added a note to ReadMe.html to enable the CSP upgrade-insecure-requests directive in Startup.cs.
 MVC 6
 - Added Application Insights Feature.
+- SitemapPingerService now uses the hosting environment and only works in the production environment.
 
 Version 2.6.0
 MVC 5
